@@ -1,5 +1,7 @@
 Wed Aug 31, 2005 Linas Vepstas <linas@linas.org>
 	* Bump to version number 2.2.2
+	* Add partial support for sourceforge feature request 
+	  [ 1171211 ] possibility to turn off the toolbar
 	* Fix sourceforge bug [ 799077 ] projects blanked when first time user
 	  tries to sort
 	* query.c: fix broken leap-year calculation, leading to bugs
